# mcp-memory-blockchain

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-blockchain.txt  requirements.txt
config/: genesis.json
docker/: blockchain.Dockerfile  mcp.Dockerfile  migration.Dockerfile
mcp_memory_blockchain/: __init__.py  __main__.py  server.py
mcp_memory_blockchain/blockchain/: __init__.py  consensus.py  contracts.py  core.py
mcp_memory_blockchain/storage/: __init__.py  neo4j_store.py  qdrant_store.py
scripts/: blockchain_node.py  example_usage.py  setup.py
scripts/migration/: migrate_memory.py
tests/: test_blockchain.py  test_contracts.py  test_storage.py
